package recursos.MVC.views;

public class GrupoView {
}
